<resources>
    <string name="app_name">ModooPlay Demo</string>

    <string name="age_tips">适龄提示</string>
    <string name="health_game">健康游戏</string>
    <string name="debug_page">调试页面</string>
    <string name="wechat">微信登录</string>
    <string name="ad_test">广告测试</string>
    <string name="user_agreement">用户协议</string>
    <string name="privacy_policy">隐私政策</string>
    <string name="anti_addiction">游戏防沉迷</string>
    <string name="udesk">客服系统</string>
    <string name="logout">注销</string>
    <string name="richox_test">RichOX测试</string>

    <string name="anti_addiction_real_name">实名认证</string>
    <string name="anti_addiction_real_name_customui">实名认证（应用自定义 UI）</string>
    <string name="anti_addiction_update_user">更新用户</string>
    <string name="anti_addiction_name">姓名</string>
    <string name="anti_addiction_idNumber">身份证</string>

    <string name="facebook_app_id">650229192313468</string>
    <string name="fb_login_protocol_scheme">fb650229192313468</string>
    <string name="server_client_id">575452748759-iaehsmv13ao44p8khpnp2mclp5uk62b2.apps.googleusercontent.com</string>

</resources>