<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="30dp"
                android:text="ModooPlay Demo"
                android:textSize="40dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button_debug_page"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginBottom="10dp"
                android:text="@string/debug_page"
                android:textSize="20dp" />

            <Button
                android:id="@+id/button_wechat"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginBottom="10dp"
                android:text="@string/wechat"
                android:textSize="20dp" />

            <Button
                android:id="@+id/button_ad_test"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginBottom="10dp"
                android:text="@string/ad_test"
                android:textSize="20dp" />

            <Button
                android:id="@+id/button_user_agreement"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginBottom="10dp"
                android:text="@string/user_agreement"
                android:textSize="20dp" />

            <Button
                android:id="@+id/button_privacy_policy"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginBottom="10dp"
                android:text="@string/privacy_policy"
                android:textSize="20dp" />

            <Button
                android:id="@+id/button_anti_addiction"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginBottom="10dp"
                android:text="@string/anti_addiction"
                android:textSize="20dp" />

            <Button
                android:id="@+id/button_clear_cache"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginBottom="10dp"
                android:text="@string/clear_cache"
                android:textSize="20dp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>